# Quanta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Quanta/: CMakeLists.txt
Quanta/Include/Quanta/: Audio.h  Core.h  Graphics.h  Gui.h  Input.h  Quanta.h  Renderer.h  Scripting.h
Quanta/Include/Quanta/Audio/: Audio.h  AudioApi.h  AudioBuffer.h  AudioDevice.h  AudioSource.h  SoundFormat.h
Quanta/Include/Quanta/Core/: Application.h  Core.h  Event.h
Quanta/Include/Quanta/Environment/: OS.h
Quanta/Include/Quanta/Graphics/: DrawCommand.h  Graphics.h  GraphicsApi.h  GraphicsDevice.h  Imaging.h  Pipeline.h  Texture.h
Quanta/Include/Quanta/Gui/: Gui.h
Quanta/Include/Quanta/IO/: FileStream.h
Quanta/Include/Quanta/Input/: Input.h  Key.h  MouseButton.h
Quanta/Include/Quanta/Logging/: Level.h  LevelMask.h  Log.h
Quanta/Include/Quanta/Math/: FloatingPoint.h  Integer.h  Vector.h
Quanta/Include/Quanta/Memory/: Pointer.h  Span.h
Quanta/Include/Quanta/Renderer/: DirectionalLight.h  Material.h  Mesh.h  Model.h  PointLight.h  Renderer3D.h  Vertex.h
Quanta/Include/Quanta/Scene/: Entity.h  Scene.h  SceneRenderer.h
Quanta/Include/Quanta/Scripting/: Script.h  ScriptRuntime.h
Quanta/Include/Quanta/Text/: CPreProcessor.h
Quanta/Source/Audio/: AudioBuffer.cpp  AudioDevice.cpp  AudioSource.cpp
Quanta/Source/CLI/Log/: Log.cpp
Quanta/Source/CLI/Shell/: Shell.cpp
Quanta/Source/Core/: Application.cpp
Quanta/Source/Core/Windowing/: Window.cpp
Quanta/Source/Debugging/: Validation.h
Quanta/Source/Environment/: BuildMode.h
Quanta/Source/Graphics/: GraphicsDevice.cpp  Implementation.h
Quanta/Source/Graphics/Buffer/: GraphicsBuffer.cpp  VertexArray.cpp  VertexElement.cpp  VertexLayout.cpp
Quanta/Source/Graphics/Imaging/: Color32.cpp  Image32.cpp
Quanta/Source/Graphics/Pipeline/: RasterPipeline.cpp
Quanta/Source/Graphics/Shader/: ShaderModule.cpp
Quanta/Source/IO/: FileStream.cpp
Quanta/Source/Logging/: Log.cpp
Quanta/Source/Quanta/: Log.cpp  Quanta.h
Quanta/Source/Renderer/: Material.cpp  Mesh.cpp  Model.cpp  Renderer3D.cpp
Quanta/Source/Scene/: Entity.cpp  Scene.cpp  SceneRenderer.cpp
Quanta/Source/Scripting/: Script.cpp  ScriptRuntime.cpp
Quanta/Source/Text/: CPreProcessor.cpp
Quanta/Source/Utilites/: Precompiled.h  Symbols.h
QuantaEditor/: CMakeLists.txt  README.md
QuantaEditor/Resources/Models/: light_sphere.fbx  teapot.glb
QuantaEditor/Resources/Scripts/: lib.as  test.as
QuantaEditor/Source/: Editor.cpp  Editor.h  Program.cpp
QuantaEditor/Source/Gizmo/: ImGuizmo.cpp  ImGuizmo.h
QuantaEditor/Source/Widgets/: LogWidget.cpp  LogWidget.h  SceneViewer.cpp  SceneViewer.h  Style.h  TerminalEmulator.cpp  TerminalEmulator.h
(+316 files in other folders)
